<resources>
    <string name="app_name">Happy Meal</string>
    <string name="action_search">Search</string>
    <string name="NO_INTERNET_TOAST">No Internet connexion</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding the food</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="search_food">Search food</string>
    <string name="RECENT_NUTRITION">recent_nutrition</string>
    <string name="NO_RECENT_NUITRITION">NoRecentNutrition</string>
    <string name="CALORIES_TITLE">Calories :\u0020</string>
    <string name="CALORIES_UNIT">\u0020Kcal</string>
    <string name="DIET_LABEL_TITLE">Diet label :\u0020</string>
    <string name="LACK_INFORMATION_NUTRIENT">Lack of information for this nutrient</string>
    <string name="NUTRIENTS_WIDGET">nutrients_widget</string>
    <string name="ENTERED_DATA_NOT_CORRECT_OR_CAN_NOT_BE_FOUOND">Your entered data isn\'t correct or it can\'t be found</string>
    <string name="FOOD_SAVED">Food saved</string>
    <string name="FOOD_ALREADY_SAVED">The food has already been saved</string>
    <string name="FOOD_DELETED">Food deleted</string>
    <string name="CAN_NOT_DELETE_NOTE_NOT_BEEN_SAVED">Can\'t delete the food that has not been saved</string>
    <string name="PLEASE_ENTER_FOOD">Please enter the food</string>
    <string name="NUTRIENTS_TITLE">Nutrients :\u0020</string>
    <string name="please_enter_the_food_ex_1_apple">Please enter the food (Ex: 1 apple)</string>
    <string name="search_button_name">Search</string>
    <string name="empty_nutrition_image">empty nutrition image</string>
    <string name="save_menu_detail">Save</string>
    <string name="delete_menu_detail">Delete</string>
    <string name="share_menu_detail">Share</string>
</resources>