<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_food_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout_main"
        app:layout_constraintBottom_toTopOf="@id/adView" />

    <RelativeLayout
        android:id="@+id/empty_view_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView">

        <ImageView
            android:id="@+id/empty_nutrition_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/empty_nutrition_image"
            android:src="@drawable/empty_shelter_image"/>

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_nutrition_image"
            android:text="@string/empty_view_title_text" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_title_text"
            android:text="@string/empty_view_subtitle_text" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:fabSize="normal"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:id="@+id/search_fab"
        android:src="@drawable/ic_action_search"
        android:contentDescription="@string/action_search"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>